--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
+
 .main {
     /* text-align: center; */
-    background:#fff;
+    background: #fff;
     border-radius: 8px;
     box-shadow: 0 5px 15px rgb(0 0 0 / 80%);
     transition: all 0.3s linear;
@@ -20,9 +21,14 @@
 
 
 }
-a{
+
+a {
     text-decoration: none;
     color: #0084ff;
+}
+
+p:hover {
+    cursor: pointer;
 }
 
 
@@ -33,18 +39,19 @@ a{
     left: 97px;
 
 }
-.images{
-    display:flex ;
+
+.images {
+    display: flex;
     flex-wrap: wrap;
 }
 
 
-.img{
+.img {
     margin: 30px;
 
     height: 228px;
     border-radius: 42px;
-    
+
 }
 
 
@@ -86,10 +93,12 @@ a{
     0% {
         left: -40%;
     }
+
     50% {
         left: 20%;
         width: 80%;
     }
+
     100% {
         left: 100%;
         width: 100%;
@@ -104,6 +113,7 @@ input[type="text"] {
     width: 38%;
     height: 35px;
 }
+
 button {
     background: #fff;
     height: 40px;
@@ -119,22 +129,31 @@ button:hover {
     cursor: pointer;
 
 }
-.active{
+
+.active {
     background-color: rgba(255, 255, 255, 0.125);
     border-color: #0c8fc1;
     color: #0c8fc1;
 
 }
 
+p {
+    color: white;
+    background-color: #0c8fc1;
+    width: fit-content;
+    border: #0084ff;
+    border-radius: 3px;
+}
 
-.btn{
+
+
+.btn {
 
     margin-left: 21pc;
     margin-top: 1pc;
 
 }
 
-.show{
+.show {
     display: block;
 }
-
